infrastructure/dev/k8s-dashboard/dashboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: dashboard-ingress
  namespace: monitoring
spec:
  tls:
    - hosts:
        - 127.0.0.1
      secretName: kubernetes-dashboard-cert
  rules:
    - host: 127.0.0.1
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
